section-6-Networking-in-Kubernetes/ingress-simple-fanout/nginx-deployment-1.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-simple-fanout


# ConfigMap for nginx vhost configs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-deployment-web1
    env: test
  name: nginx-deployment-web1
  namespace: ingress-simple-fanout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deployment-web1
      env: test
  template:
    metadata:
      labels:
        app: nginx-deployment-web1
        env: test
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config-web1
          mountPath: /etc/nginx/conf.d
        - name: nginx-html-file1
          mountPath: /usr/share/nginx/html/web1
      volumes:
      - name: nginx-config-web1
        configMap:
          name: nginx-config-web1  
      - name: nginx-html-file1
        configMap:
          name: html-file1

# Service to expose NGINX deployment
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-deployment-web1
    env: test
  name: web-service-1
  namespace: ingress-simple-fanout
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx-deployment-web1
    env: test
  type: ClusterIP
