section-6-Networking-in-Kubernetes/ingress-simple-fanout/nginx-deployment-2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-simple-fanout


# ConfigMap for nginx vhost configs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-deployment-web2
    env: test
  name: nginx-deployment-web2
  namespace: ingress-simple-fanout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deployment-web2
      env: test
  template:
    metadata:
      labels:
        app: nginx-deployment-web2
        env: test
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config-web2
          mountPath: /etc/nginx/conf.d
        - name: nginx-html-file2
          mountPath: /usr/share/nginx/html/web2
      volumes:
      - name: nginx-config-web2
        configMap:
          name: nginx-config-web2  
      - name: nginx-html-file2
        configMap:
          name: html-file2

# Service to expose NGINX deployment
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-deployment-web2
    env: test
  name: web-service-2
  namespace: ingress-simple-fanout
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx-deployment-web2
    env: test
  type: ClusterIP
