section-6-Networking-in-Kubernetes/ingress-simple-fanout/ingress-fanout.yaml
# Ingress Object 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-simple-fanout-ingress
  namespace: ingress-simple-fanout
spec:
  ingressClassName: nginx
  rules:
  - host: fanout.example.com
    http:
      paths:
      - path: /web1
        pathType: Prefix
        backend:
          service:
            name: web-service-1
            port:
              number: 80
      
      - path: /web2
        pathType: Prefix
        backend:
          service:
            name: web-service-2
            port:
              number: 80
